<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:id="@+id/regregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/regregister"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        />
    <EditText
        android:id="@+id/regusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regusername"
        android:layout_below="@id/regregister"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/regpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regpassword"
        android:layout_below="@id/regusername"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/verpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/verifikasi_password"
        android:layout_below="@id/regpassword"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_regregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_regregister"
        android:layout_below="@id/verpass"
        android:layout_alignParentRight="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_regback"
        android:layout_below="@id/verpass"
        android:layout_marginRight="10sp"
        android:layout_toLeftOf="@id/btn_regregister"
        />


</RelativeLayout>